Fix "Property is ignored due to the display. With 'display: block', vertical-align should not be used." error by removing vertical-align.

--- a/_sass/_footer-social.scss
+++ b/_sass/_footer-social.scss
@@ -199,7 +199,6 @@
             display: block;
             margin: auto;
             flex-shrink: 0;
-            vertical-align: middle;
           }
 
           // Hide text on mobile, show only icons
